2010-06-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (.TM.repl.i.mat): renamed from .TM.repl.i.2col().
	* R/Matrix.R (.repl.i.lSMat): implement logical sparse
	sub-assignment: M[<lsparseMatrix>] <- v; ditto for dense & nsparse.

	* R/Csparse.R (.CM.repl.i.lSMat, ..): direct logical sparse
	sub-assignment for "Csparse".

2010-06-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (sparseMatrix): re-enable 'dimnames' argument.

2010-06-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (model.Matrix): tweak for NULL contrasts in dense case.

2010-06-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/spModel.matrix.R (Sparse.model.matrix): adapt to the fact, that
	sparse.model.matrix() returns not just a dgCMatrix.

2010-05-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-40, CRAN-released: 2010-06-04

	* R/AllClass.R: new classes "ModelMatrix", "sparseModelMatrix", etc.

	* R/spModels.R (sparse.model.matrix): now return
	"dsparseModelMatrix" object, notably with 'assign' slot.
	* R/spModels.R (model.spmatrix): faster, using lower level
	cbind2/rbind2 directly.

	* R/spModels.R (model.Matrix): new function,
	returning "ddenseModelMatrix".

	* NAMESPACE: export new classes.

2010-05-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Csparse.c (Csparse_horzcat, Csparse_vertcat): ensure that
	rBind()/cBind() i.e., rbind2()/cbind2() return logical sparse
	matrices when the components are.
	* tests/bind.R: test

2010-05-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R: A[] <- v ; differentiate dense & sparse
	* R/pMatrix.R: disallow <pMatrix>[] <- v  more consequently

	* tests/indexing.R: test above


2010-05-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (model.spmatrix): deal with "AsIs" components
	* tests/spModel.matrix.R: test that

2010-05-01  Martin Maechler  <maechler@stat.math.ethz.ch>
