@@ -31,7 +31,7 @@
 \newenvironment{smallexample}{\begin{alltt}\small}{\end{alltt}}
 \newenvironment{display}{\list{}{}\item\relax}{\endlist}
 \newenvironment{smallverbatim}{\small\verbatim}{\endverbatim}
-% This is already in ``Sweave'' :
+% This is already in ``Sweave'' -- but withOUT the  fontsize=\small part !!
 %% \RequirePackage{fancyvrb}
 %% \DefineVerbatimEnvironment{Sinput}{Verbatim}{fontsize=\small,fontshape=sl}
 %% \DefineVerbatimEnvironment{Soutput}{Verbatim}{fontsize=\small}
