@@ -13,6 +13,8 @@
 \alias{coerce,dspMatrix,dsyMatrix-method}
 \alias{coerce,dspMatrix,lspMatrix-method}
 \alias{coerce,dspMatrix,matrix-method}
+\alias{coerce,dspMatrix,CsparseMatrix-method}
+\alias{coerce,dspMatrix,sparseMatrix-method}
 \alias{coerce,dgeMatrix,dspMatrix-method}
 \alias{coerce,matrix,dspMatrix-method}
 \alias{coerce,dgeMatrix,dsyMatrix-method}% or rather setIs?
